--- a/Statecraft.Common/Statecraft.Common.csproj
+++ b/Statecraft.Common/Statecraft.Common.csproj
@@ -40,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\CoastType.cs" />
     <Compile Include="Enums\Country.cs" />
     <Compile Include="Enums\Territory.cs" />
+    <Compile Include="Enums\TerritoryType.cs" />
     <Compile Include="Enums\UnitType.cs" />
+    <Compile Include="Models\Coast.cs" />
     <Compile Include="Models\GameState.cs" />
     <Compile Include="Models\Territory.cs" />
     <Compile Include="Models\Unit.cs" />
