--- a/Statecraft.Services/Statecraft.Services.csproj
+++ b/Statecraft.Services/Statecraft.Services.csproj
@@ -243,11 +243,14 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\CreateNewGameRequest.cs" />
-    <Compile Include="Models\StartGameRequest.cs" />
+    <Compile Include="Models\Requests\CreateNewGameRequest.cs" />
+    <Compile Include="Models\Requests\StartGameRequest.cs" />
+    <Compile Include="Models\Requests\UpdateGameStateRequest.cs" />
+    <Compile Include="Models\Responses\GameResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Repositories\GameRepository.cs" />
+    <Compile Include="Repositories\GameRepositoryFake.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
