refactor display text logic for home screen list adapter into a GameLogic helper class

--- a/Statecraft.GameLogic/Statecraft.GameLogic.csproj
+++ b/Statecraft.GameLogic/Statecraft.GameLogic.csproj
@@ -41,6 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\DisplayTextHelper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Statecraft.Common\Statecraft.Common.csproj">
+      <Project>{70EF42C5-4A7D-479B-9425-3E4C23B81CFC}</Project>
+      <Name>Statecraft.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
