--- a/Statecraft.App/Statecraft.App.csproj
+++ b/Statecraft.App/Statecraft.App.csproj
@@ -82,6 +82,10 @@
       <Project>{70ef42c5-4a7d-479b-9425-3e4c23b81cfc}</Project>
       <Name>Statecraft.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Statecraft.GameLogic\Statecraft.GameLogic.csproj">
+      <Project>{570E8483-5D42-4141-B82F-175AC7B403B8}</Project>
+      <Name>Statecraft.GameLogic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
