--- a/Statecraft.Services/Statecraft.Services.csproj
+++ b/Statecraft.Services/Statecraft.Services.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\GameController.cs" />
+    <Compile Include="Controllers\GameStateController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -243,10 +244,6 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\Requests\CreateNewGameRequest.cs" />
-    <Compile Include="Models\Requests\StartGameRequest.cs" />
-    <Compile Include="Models\Requests\UpdateGameStateRequest.cs" />
-    <Compile Include="Models\Responses\GameResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Repositories\GameRepository.cs" />
