--- a/Statecraft.Services/Web.config
+++ b/Statecraft.Services/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Statecraft.Services-20170413020933.mdf;Initial Catalog=aspnet-Statecraft.Services-20170413020933;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Statecraft.Services-20170413020933.mdf;Initial Catalog=aspnet-Statecraft.Services-20170413020933;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=tcp:thecabbagestatecraft.database.windows.net,1433;Initial Catalog=Statecraft;User Id=caleb@thecabbagestatecraft.database.windows.net;Password=Lord1234;"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
