add ClickHandler, OrderHandler and initial logic for both

--- a/Statecraft.Common/Statecraft.Common.csproj
+++ b/Statecraft.Common/Statecraft.Common.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Enums\CoastType.cs" />
     <Compile Include="Enums\Country.cs" />
+    <Compile Include="Enums\OrderType.cs" />
     <Compile Include="Enums\Phase.cs" />
     <Compile Include="Enums\Season.cs" />
     <Compile Include="Enums\Territory.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Models\GameOptions.cs" />
     <Compile Include="Models\GameRound.cs" />
     <Compile Include="Models\GameState.cs" />
+    <Compile Include="Models\MoveAttempt.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Models\Territory.cs" />
     <Compile Include="Models\Unit.cs" />
