--- a/Statecraft.GameLogic/Statecraft.GameLogic.csproj
+++ b/Statecraft.GameLogic/Statecraft.GameLogic.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameLogic\OrderHandler.cs" />
     <Compile Include="Http\GameHttpHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ClickHandler.cs" />
     <Compile Include="UI\DisplayTextHelper.cs" />
   </ItemGroup>
   <ItemGroup>
