--- a/Statecraft.Common/Statecraft.Common.csproj
+++ b/Statecraft.Common/Statecraft.Common.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="Enums\CoastType.cs" />
     <Compile Include="Enums\Country.cs" />
-    <Compile Include="Enums\OrderType.cs" />
+    <Compile Include="Enums\OrdersType.cs" />
     <Compile Include="Enums\Phase.cs" />
     <Compile Include="Enums\Season.cs" />
     <Compile Include="Enums\Territory.cs" />
