--- a/Statecraft.Services/Web.config
+++ b/Statecraft.Services/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Statecraft.Services-20170413020933.mdf;Initial Catalog=aspnet-Statecraft.Services-20170413020933;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=tcp:thecabbagestatecraft.database.windows.net,1433;Initial Catalog=Statecraft;User Id=caleb@thecabbagestatecraft.database.windows.net;Password=Lord1234;"/>
+    <add name="DefaultConnection" connectionString="Data Source=tcp:thecabbagestatecraft.database.windows.net,1433;Initial Catalog=Statecraft;User Id=caleb@thecabbagestatecraft.database.windows.net;Password=Lord1234;" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -76,6 +76,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
