--- a/Statecraft.GameLogic/Statecraft.GameLogic.csproj
+++ b/Statecraft.GameLogic/Statecraft.GameLogic.csproj
@@ -44,6 +44,7 @@
     <Compile Include="GameLogic\CountryHelper.cs" />
     <Compile Include="GameLogic\OrdersHandler.cs" />
     <Compile Include="Http\GameHttpHelper.cs" />
+    <Compile Include="Http\OrdersHttpHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\ClickHandler.cs" />
     <Compile Include="UI\DisplayTextHelper.cs" />
