--- a/Statecraft.App/Statecraft.App.csproj
+++ b/Statecraft.App/Statecraft.App.csproj
@@ -62,7 +62,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\TerritoryUnitCoordinates.cs" />
+    <Compile Include="UI\TerritoryUiData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
