Add MoveAttempt and Player dbos

--- a/Statecraft.Common/Statecraft.Common.csproj
+++ b/Statecraft.Common/Statecraft.Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\GameValues.cs" />
     <Compile Include="Enums\CoastType.cs" />
     <Compile Include="Enums\Country.cs" />
     <Compile Include="Enums\OrdersType.cs" />
