--- a/Statecraft.App/Statecraft.App.csproj
+++ b/Statecraft.App/Statecraft.App.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Activities\GameActivity.cs" />
     <Compile Include="Adapters\HomeScreenListAdapter.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
