--- a/Statecraft.Common/Statecraft.Common.csproj
+++ b/Statecraft.Common/Statecraft.Common.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,6 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\GameValues.cs" />
+    <Compile Include="DTOs\GameDbo.cs" />
+    <Compile Include="DTOs\GameRoundDbo.cs" />
+    <Compile Include="DTOs\GameStateDbo.cs" />
+    <Compile Include="DTOs\MoveAttemptDbo.cs" />
+    <Compile Include="DTOs\PlayerDbo.cs" />
+    <Compile Include="DTOs\TerritoryDbo.cs" />
     <Compile Include="Enums\CoastType.cs" />
     <Compile Include="Enums\Country.cs" />
     <Compile Include="Enums\OrdersType.cs" />
