--- a/Statecraft.App/Properties/AndroidManifest.xml
+++ b/Statecraft.App/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Statecraft.App.Statecraft.App" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="16" />
-	<application android:label="Statecraft" android:icon="@drawable/Icon"></application>
+	<application android:label="Statecraft" android:icon="@drawable/Icon" android:theme="@style/GameTheme"></application>
 </manifest>
