--- a/Statecraft.Services/packages.config
+++ b/Statecraft.Services/packages.config
@@ -46,6 +46,10 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Serilog" version="2.4.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.Literate" version="2.1.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net452" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
