--- a/Statecraft.Services/Web.config
+++ b/Statecraft.Services/Web.config
@@ -26,6 +26,7 @@
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+    <add name="HandleOptions" type="Statecraft.Services.Http.OptionsModule" />
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -37,6 +38,8 @@
    <httpProtocol>
      <customHeaders>
        <add name="Access-Control-Allow-Origin" value="*" />
+       <add name="Access-Control-Allow-Methods" value="GET, POST, PUT DELETE, OPTIONS"/>
+       <add name="Access-Control-Expose-Headers" value="X-Impersonation-Token"/>
      </customHeaders>
    </httpProtocol>
   </system.webServer>
