--- a/WebApp/.vscode/launch.json
+++ b/WebApp/.vscode/launch.json
@@ -4,15 +4,31 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "type": "node",
+            "type": "chrome",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}",
-            "outFiles": [
-                "${workspaceRoot}/out/**/*.js"
-            ]
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:4200",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "Attach to Chrome",
+            "port": 9222,
+            "webRoot": "${workspaceFolder}"
         }
     ]
+    // "configurations": [
+        
+    //     {
+    //         "type": "node",
+    //         "request": "launch",
+    //         "name": "Launch Program",
+    //         "program": "${file}",
+    //         "outFiles": [
+    //             "${workspaceRoot}/out/**/*.js"
+    //         ]
+    //     }
+    // ]
 }
